<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:gravity="center" android:id="@id/message" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_margin="@dimen/oracle_detail_spacing" android:text="" />
    <DatePicker android:id="@id/dialog_date_date_picker" android:layout_width="fill_parent" android:layout_height="fill_parent" />
    <LinearLayout android:orientation="vertical" android:id="@id/am_pm_panel" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/oracle_detail_spacing">
        <RadioGroup android:gravity="center_horizontal" android:layout_gravity="center_horizontal" android:id="@id/am_pm_radio_group" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <RadioButton android:id="@id/am_radio_button" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/strAm" />
            <RadioButton android:id="@id/pm_radio_button" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/strPm" />
        </RadioGroup>
        <TextView android:gravity="center" android:id="@id/am_pm_explanation" android:padding="@dimen/help_spacing" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/strAmPmExplanation" />
    </LinearLayout>
</LinearLayout>