<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView android:id="@id/ScrollView01" android:layout_width="fill_parent" android:layout_height="fill_parent" android:fillViewport="true">
        <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/LinearLayout01" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <!-- PSI Chrono "Akashic" card — the external hidden seal. Shown always (layout C) or
                 collapsed behind the header (layout D); the OracleFragment wires it per the gear toggle. -->
            <LinearLayout android:id="@+id/psiCard" android:orientation="vertical"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:layout_margin="10dp" android:padding="10dp"
                android:background="@drawable/mw_psi_card">
                <LinearLayout android:id="@+id/psiHeader" android:orientation="horizontal"
                    android:layout_width="match_parent" android:layout_height="wrap_content"
                    android:gravity="center_vertical">
                    <TextView android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1"
                        android:text="@string/strPsiAkashic" android:textColor="@color/mw_gold" android:textStyle="bold" />
                </LinearLayout>
                <LinearLayout android:id="@+id/psiBox" android:orientation="horizontal"
                    android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal" android:gravity="center_vertical" android:paddingTop="8dp">
                    <LinearLayout android:orientation="vertical" android:gravity="center_horizontal"
                        android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginEnd="10dp">
                        <ImageView android:id="@+id/psiTone" android:layout_width="44dp" android:layout_height="16dp"
                            android:scaleType="fitCenter" android:contentDescription="@string/dcTone" />
                        <ImageView android:id="@+id/psiGlyph" android:layout_width="44dp" android:layout_height="44dp"
                            android:layout_marginTop="3dp" android:scaleType="fitCenter" android:contentDescription="@string/dcGlyph" />
                    </LinearLayout>
                    <TextView android:id="@+id/psiName" android:layout_width="wrap_content" android:layout_height="wrap_content"
                        android:textColor="@color/mw_cream" />
                </LinearLayout>
            </LinearLayout>
            <RelativeLayout android:id="@id/RelativeLayout01" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textSize="@dimen/flower_info_text_size" android:textColor="@color/text_color" android:gravity="center" android:id="@id/guideText" android:background="@drawable/dw_caption_box" android:padding="2.0dip" android:layout_width="@dimen/glyph_width" android:layout_height="wrap_content" android:text="@string/lbGuide" android:layout_centerHorizontal="true" />
                <ImageView android:id="@+id/guideTone" android:padding="2.0dip" android:layout_width="@dimen/glyph_width" android:layout_height="@dimen/tone_height" android:scaleType="centerCrop" android:layout_below="@id/guideText" android:layout_centerHorizontal="true" android:contentDescription="@string/dcTone" />
                <ImageView android:id="@id/guideImage" android:padding="2.0dip" android:layout_width="@dimen/glyph_width" android:layout_height="@dimen/glyph_width" android:scaleType="centerCrop" android:layout_below="@id/guideTone" android:layout_centerHorizontal="true" android:contentDescription="@id/guideText" />
                <TextView android:textSize="@dimen/flower_info_text_size" android:textStyle="bold" android:textColor="@color/mw_gold" android:gravity="center" android:id="@+id/destinyText" android:background="@drawable/dw_caption_box" android:padding="2.0dip" android:layout_width="@dimen/glyph_width" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/strDestiny" android:layout_below="@id/guideImage" android:layout_centerHorizontal="true" />
                <ImageView android:id="@+id/destinyTone" android:padding="2.0dip" android:layout_width="@dimen/glyph_width" android:layout_height="@dimen/tone_height" android:scaleType="centerCrop" android:layout_below="@id/destinyText" android:layout_centerHorizontal="true" android:contentDescription="@string/dcTone" />
                <ImageView android:id="@id/glyphImage" android:padding="2.0dip" android:layout_width="@dimen/glyph_width" android:layout_height="@dimen/glyph_width" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" android:layout_marginBottom="10.0dip" android:scaleType="centerCrop" android:layout_below="@id/destinyTone" android:layout_centerHorizontal="true" android:contentDescription="@string/dcGlyph" />
                <TextView android:textSize="@dimen/flower_info_text_size" android:textColor="@color/text_color" android:gravity="center" android:id="@id/antipodeText" android:background="@drawable/dw_caption_box" android:padding="2.0dip" android:layout_width="@dimen/glyph_width" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" android:text="@string/lbAntipode" android:layout_toLeftOf="@id/glyphImage" android:layout_above="@+id/antipodeTone" />
                <ImageView android:id="@+id/antipodeTone" android:padding="2.0dip" android:layout_width="@dimen/glyph_width" android:layout_height="@dimen/tone_height" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" android:scaleType="centerCrop" android:layout_toLeftOf="@id/glyphImage" android:layout_above="@id/antipodeImage" android:contentDescription="@string/dcTone" />
                <ImageView android:id="@id/antipodeImage" android:padding="2.0dip" android:layout_width="@dimen/glyph_width" android:layout_height="@dimen/glyph_width" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" android:scaleType="centerCrop" android:layout_toLeftOf="@id/glyphImage" android:layout_alignTop="@id/glyphImage" android:contentDescription="@id/antipodeText" />
                <TextView android:textSize="@dimen/flower_info_text_size" android:textColor="@color/text_color" android:gravity="center" android:id="@id/analogText" android:background="@drawable/dw_caption_box" android:padding="2.0dip" android:layout_width="@dimen/glyph_width" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" android:text="@string/lbAnalog" android:layout_toRightOf="@id/glyphImage" android:layout_above="@+id/analogTone" />
                <ImageView android:id="@+id/analogTone" android:padding="2.0dip" android:layout_width="@dimen/glyph_width" android:layout_height="@dimen/tone_height" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" android:scaleType="centerCrop" android:layout_toRightOf="@id/glyphImage" android:layout_above="@id/analogImage" android:contentDescription="@string/dcTone" />
                <ImageView android:id="@id/analogImage" android:padding="2.0dip" android:layout_width="@dimen/glyph_width" android:layout_height="@dimen/glyph_width" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" android:scaleType="centerCrop" android:layout_toRightOf="@id/glyphImage" android:layout_alignTop="@id/glyphImage" android:contentDescription="@id/analogText" />
                <TextView android:textSize="@dimen/flower_info_text_size" android:textColor="@color/text_color" android:gravity="center" android:id="@id/occultText" android:background="@drawable/dw_caption_box" android:padding="2.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/lbOccult" android:layout_below="@id/glyphImage" android:layout_centerHorizontal="true" />
                <ImageView android:id="@+id/occultTone" android:padding="2.0dip" android:layout_width="@dimen/glyph_width" android:layout_height="@dimen/tone_height" android:scaleType="centerCrop" android:layout_below="@id/occultText" android:layout_centerHorizontal="true" android:contentDescription="@string/dcTone" />
                <ImageView android:id="@id/occultImage" android:padding="2.0dip" android:layout_width="@dimen/glyph_width" android:layout_height="@dimen/glyph_width" android:scaleType="centerCrop" android:layout_below="@id/occultTone" android:layout_centerHorizontal="true" android:contentDescription="@id/occultText" />
            </RelativeLayout>
            <TextView android:textSize="@dimen/big_text_size" android:textStyle="bold" android:textColor="@color/text_color" android:gravity="center_horizontal" android:layout_gravity="center_horizontal" android:id="@id/galacticName" android:background="@drawable/dw_caption_box" android:padding="12.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>